# TestTask

./: .dockerignore  .env_for_test_db  .gitignore  .test_env  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 146c6a3f0586_initial.py  87742191f2bf_fixed_migration.py  8ab42dcd1716_first_migration.py
src/: config.py  main.py
src/dependencies/: service_dependencies.py  session_dep.py
src/models/: annotated_types.py  base.py  category.py  item.py
src/repositories/: category_repo.py  crud_repo.py  exc.py  item_repo.py
src/routers/: __init__.py  category.py  items.py
src/routers.py/: category.py  items.py
src/schemas/: category_schemas.py  items_schemas.py
src/services/: HTTPexc.py  category_service.py  item_service.py
tests/: conftest.py  test_category_api_positive.py  test_item_api_positive.py
