[tool.pytest.ini_options]
pythonpath = [
    ".", "src",
]
asyncio_mode="auto"

[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["SosisterRapStar <timoshenkovvanya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
asyncio = "^3.4.3"
asyncpg = "^0.29.0"
pydantic = "^2.7.4"
black = "^24.4.2"
pydantic-settings = "^2.3.3"
alembic = "^1.13.1"
pytest-asyncio = "^0.23.7"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
